--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,91 @@
-.App {
-  text-align: center;
+*{
+  box-sizing: border-box;
+}
+main{
+  padding: 10px;
+  max-width: 700px;
+  margin: 0 auto;
+
+}
+header{
+  display:flex;
+  justify-content:space-between;
+  margin-bottom:50px;
+  margin-top: 20px;
+  align-items:center;
+}
+header a{
+  text-decoration: none;
+  color: inherit;
+}
+body{
+  color: #222;
+
+}
+header a.logo{
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+header nav{
+  display:flex;
+  gap:15px;
+}
+img{
+  max-width: 100%;
+}
+div.post{
+  display:grid;
+  grid-template-columns: .9fr 1.1fr;
+  gap: 20px;
+  margin-bottom:35px;
+
+}
+div.post div.text h2{
+  margin: 0;
+  font-size: 1.9rem;
+}
+div.post p.info{
+margin:6px 0;
+color:#888;
+font-size: .7rem;
+font-weight: bold;
+display:flex;
+gap: 10px;
+
+}
+div.posts p.info a.author{
+  color: #333;
+}
+div.post p.summary{
+  margin:10px 0;
+  line-height:1.5 rem;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+form.login, form.register{
+  max-width: 400px;
+  margin: 0 auto;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input{
+  display: block;
+  margin-bottom:5px;
+  width:100%;
+  padding:7px;
+  border: 2px solid #ddd;
+  background-color: #fff;
+  border-bottom: 1px solid #ccc;
+  border-radius: 5px;
 }
-
-.App-link {
-  color: #61dafb;
+button{
+  width:100%;
+  display:block;
+  background-color: #555;
+  border: 0;
+  color: #fff;
+  border-radius: 5px;
+  padding: 7px 0;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+form h1{
+text-align: center;
 }
